# makemore-numpy

./: .gitignore  README.md  pyproject.toml
experiments/: broadcasting_in_action.py  compute_loss_bigrams.py  count_bigrams.py  sample_bigrams.py  sample_neural_bigrams.py  train_mlp.py  train_neural_bigram.py
expreriments/: count_bigrams.py
src/makemore/: bigram.py  counting.py  data.py  neural.py  neural_bigram.py  neural_mlp.py
src/rnnumpy/: bigram.py
tests/: test_backward.py  test_backward_neural_bigram.py  test_backward_neural_mlp.py
